fixed get back to main page link

--- a/recipes/ScrambledEggs.html
+++ b/recipes/ScrambledEggs.html
@@ -48,6 +48,6 @@
 
     <a href="#header">Return to the top</a>
     <p></p>
-    <a href="index.html">Back To Main Page</a>
+    <a href="../index.html">Back To Main Page</a>
   </body>
 </html>
