--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kitchen Nightmare Recipes</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>The Highest Rated Recipes From Kitchen Nightmares!</h1>
     <img
+      class="image"
       src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.rRyttkezGZ633SxoZbpyAgHaED%26pid%3DApi&f=1&ipt=85f1f1bcb56168f26b41e309620b934129eb6db3f43dee0eca9b95c68d1af590&ipo=images"
       alt="kitchen Nightmares meme"
       style="width: 800px; height: 450px"
-    />
-    <h3>The top 3 dishes!</h3>
+    /><div>
+      <h1 id="main-title">
+        The Highest Rated Recipes From Kitchen Nightmares!
+      </h1>
+    </div>
+    <h3 id="subtitle">The top 3 dishes!</h3>
     <div>
       <ul>
-        <li><a href="recipes/seaFoodPasta.html">Seafood Pasta</a></li>
-        <li><a href="recipes/ScrambledEggs.html">Scrambled eggs x oreo</a></li>
-        <li><a href="recipes/spaghettiBrich.html">Spaghetti Brick</a></li>
+        <li class="link one"><a href="recipes/seaFoodPasta.html">Seafood Pasta</a></li>
+        <li class="link two"><a href="recipes/ScrambledEggs.html">Scrambled eggs x oreo</a></li>
+        <li class="link three"><a href="recipes/spaghettiBrich.html">Spaghetti Brick</a></li>
       </ul>
     </div>
 
-    <a href="#header">Return to the top</a>
+    <a id="main-link" href="#header">Return to the top</a>
   </body>
 </html>
