--- a/recipes/spaghettiBrich.html
+++ b/recipes/spaghettiBrich.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scrambled Eggs X Oreo</title>
+    <title>Spaghetti Brick</title>
   </head>
   <body>
-    <h1>Scrambled Eggs X Oreo !!</h1>
+    <h1>Spaghetti brick..</h1>
     <img
       src="https://preview.redd.it/pkqymkmzkuf41.jpg?width=640&crop=smart&auto=webp&s=f982cdba95409ddab076068e79068bd82a7c4e1d"
       alt="spaghetti brick"
