more shitty css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <li class="link three"><a href="recipes/spaghettiBrich.html">Spaghetti Brick</a></li>
       </ul>
     </div>
-
+    <div class="main-link">
     <a id="main-link" href="#header">Return to the top</a>
+  </div>
   </body>
 </html>
