--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="header">
+      <ul>
+      <div class="one">one</div>
+      <div class="two">two</div>
+      <div class="three">three</div>
+      <ul>
+        <div class="logo">TEST</div>
+    </div>
     <img
       class="image"
       src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.rRyttkezGZ633SxoZbpyAgHaED%26pid%3DApi&f=1&ipt=85f1f1bcb56168f26b41e309620b934129eb6db3f43dee0eca9b95c68d1af590&ipo=images"
